Pull image from registry

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,37 +1,23 @@
 # This file is a template, and might need editing before it works on your project.
-# This is the Gradle build system for JVM applications
-# https://gradle.org/
-# https://github.com/gradle/gradle
-image: gradle:alpine
+image: docker:git
 
-# Disable the Gradle daemon for Continuous Integration servers as correctness
-# is usually a priority over speed in CI environments. Using a fresh
-# runtime for each build is more reliable since the runtime is completely
-# isolated from any previous builds.
-variables:
-  GRADLE_OPTS: "-Dorg.gradle.daemon=false"
-
-before_script:
-  - export GRADLE_USER_HOME=`pwd`/.gradle
+services:
+  - docker:dind
 
 build:
-  stage: build
-  script: gradle --build-cache assemble
-  cache:
-    key: "$CI_COMMIT_REF_NAME"
-    policy: push
-    paths:
-      - build
-      - .gradle
-
-
-test:
+#  stage: build
+# Cannot build the image on GitLab since it depends on parabank.war. I don't want to put that
+# in GitLab (though I am happy to put the docker image built from it on Gitlab! :) )
+#  script:
+#    - docker build -t registry.gitlab.com/integrationqa/iqa/demos/docker/parabank:latest parabank
+#
+# test:
   stage: test
-  script: gradle check
-  cache:
-    key: "$CI_COMMIT_REF_NAME"
-    policy: pull
-    paths:
-      - build
-      - .gradle
+  script:
+    - docker login -u gitlab-ci-token -p $CI_BUILD_TOKEN registry.gitlab.com
+    - docker run -itd --name test_base_parabank registry.gitlab.com/integrationqa/iqa/demos/docker/parabank:latest
+    - docker stop test_base_parabank
 
+# deploy:
+#   stage: deploy
+#   script: docker push registry.gitlab.com/integrationqa/iqa/demos/docker/parabank:latest
