Add demo of simulating network failures.

--- a/mysql-faketime/Dockerfile
+++ b/mysql-faketime/Dockerfile
@@ -17,3 +17,5 @@ ENV LD_PRELOAD=/usr/local/lib/faketime/libfaketime.so.1
 ENV FAKETIME_NO_CACHE=1
 ENV DONT_FAKE_MONOTONIC=1
 ENV FAKETIME=+30d
+
+ENV MYSQL_ALLOW_EMPTY_PASSWORD=1
