Add diff to volumes demo

--- a/volumes/Dockerfile
+++ b/volumes/Dockerfile
@@ -1,2 +1,5 @@
 FROM jekyll/jekyll
-COPY blog /srv/jekyll
+RUN mkdir -p /data/jekyll
+ENV JEKYLL_DATA_DIR=/data/jekyll
+COPY blog /data/jekyll
+WORKDIR /data/jekyll
