--- a/dgoss/tomcat-alpine/Dockerfile
+++ b/dgoss/tomcat-alpine/Dockerfile
@@ -1,7 +1,6 @@
 FROM tomcat:7-jre8-alpine
 RUN rm -rf /usr/local/tomcat/webapps/ROOT
-COPY sample.war /usr/local/tomcat/webapps/ROOT.war
 EXPOSE 8080
-VOLUME [ "/usr/local/tomcat" ]
+VOLUME [ "/usr/local/tomcat/webapps" ]
 ENTRYPOINT [ "catalina.sh" ]
 CMD [ "run" ]
