--- a/dgoss/tdd/iteration2/tomcat-centos/docker-compose.yml
+++ b/dgoss/tdd/iteration2/tomcat-centos/docker-compose.yml
@@ -4,6 +4,8 @@ services:
   tomcat:
     build: .
     image: acme/tomcat:centos
+    sysctls:
+      net.ipv6.conf.all.disable_ipv6: 0
     ports:
       - "8080:8080"
     volumes:
