--- a/dgoss/tdd/iteration3/goss.yaml
+++ b/dgoss/tdd/iteration3/goss.yaml
@@ -11,3 +11,8 @@ port:
 process:
   java:
     running: true
+http:
+  http://localhost:8080/sample:
+    status: 200
+    body:
+      - Hello, World
