Switch to use docker volume for warfiles

--- a/dgoss/tomcat-alpine/docker-compose.yml
+++ b/dgoss/tomcat-alpine/docker-compose.yml
@@ -7,4 +7,5 @@ services:
     ports:
       - "8080:8080"
     volumes:
-      - ../warfiles:/usr/local/tomcat/webapps
+      - warfiles:/usr/local/tomcat/webapps
+
